[package]
name = "helmux"
version = "0.1.0"
edition = "2021"
description = "A Rust frontend for tmux with a left-side clickable tab bar"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# VT parsing
vte = "0.13"

# Async
tokio = { version = "1", features = ["full"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
